resolved some serialization problems

--- a/backend/conf/common/config.properties
+++ b/backend/conf/common/config.properties
@@ -14,10 +14,11 @@ RedsMBean.BROKER=reds-tcp:localhost:5555
 
 Directory.synchronize=Manual
 
-Proxy.keys=gossip,ps,psr
+Proxy.keys=gossip,ps,psr,secureps
 Proxy.value.gossip=deliverymanager/GossipProxy/local
 Proxy.value.ps=deliverymanager/PubSubProxy/local
 Proxy.value.psr=deliverymanager/PsrProxy/local
+Proxy.value.secureps=deliverymanager/SecPubSubProxy/local
 
 Gossip.Copyforwarding=2
 Gossip.subscription_timeout=86400000
