--- a/branches/securePubSub/backend/conf/common/config.properties
+++ b/branches/securePubSub/backend/conf/common/config.properties
@@ -10,7 +10,7 @@ LoggerProxy.applicationId=deliverymanager
 LoggerProxy.applicationName=deliverymanager
 
 KeepAlive=false
-RedsMBean.BROKER=reds-tcp:localhost:5555
+RedsMBean.BROKER=reds-tcp:169.254.36.219:5555
 
 Directory.synchronize=Manual
 
@@ -33,3 +33,12 @@ SharePS.STEP=600000
 LeaseManager.initialRenew=600000
 LeaseManager.standardRenew=3600000
 LeaseManager.leaseTimeout=18000000
+
+SecPubSubProxy.simmetricAlgorithm=AES
+SecPubSubProxy.simmetricKeySize=128
+SecPubSubProxy.hashAlgorithm=SHA224
+SecPubSubProxy.CRLdistribuitionPointBaseURL=http://localhost/
+SecPubSubProxy.FederationCertificateValidityDays=30
+
+SecPubSubProxy.keystoreLocation=C:/.keystore
+SecPubSubProxy.keystorePassword=password
