--- a/backend/conf/common/config.properties
+++ b/backend/conf/common/config.properties
@@ -36,9 +36,9 @@ LeaseManager.leaseTimeout=18000000
 
 SecPubSubProxy.simmetricAlgorithm=AES
 SecPubSubProxy.simmetricKeySize=128
-SecPubSubProxy.hashAlgorithm=SHA224
+SecPubSubProxy.hashAlgorithm=SHA512
 SecPubSubProxy.CRLdistribuitionPointBaseURL=http://localhost/
 SecPubSubProxy.FederationCertificateValidityDays=30
 
-SecPubSubProxy.keystoreLocation=C:/.keystore
+SecPubSubProxy.keystoreLocation=C:/Users/Mario.BlackMamba/Desktop/keystore.jks
 SecPubSubProxy.keystorePassword=password
