--- a/branches/securePubSub/backend/conf/common/config.properties
+++ b/branches/securePubSub/backend/conf/common/config.properties
@@ -10,7 +10,7 @@ LoggerProxy.applicationId=deliverymanager
 LoggerProxy.applicationName=deliverymanager
 
 KeepAlive=false
-RedsMBean.BROKER=reds-tcp:169.254.36.219:5555
+RedsMBean.BROKER=reds-tcp:localhost:5555
 
 Directory.synchronize=Manual
 
