--- a/branches/securePubSub/backend/conf/common/config.properties
+++ b/branches/securePubSub/backend/conf/common/config.properties
@@ -28,6 +28,8 @@ NotificationMethods.keys=email,queue
 NotificationMethods.value.email=deliverymanager/Mailer/local
 NotificationMethods.value.queue=deliverymanager/JmsSender/local
 
+NodeManagerMBean.STEP=60000
+
 FederationPS.STEP=600000
 SharePS.STEP=600000
 LeaseManager.initialRenew=600000
@@ -40,5 +42,5 @@ SecPubSubProxy.hashAlgorithm=SHA512
 SecPubSubProxy.CRLdistribuitionPointBaseURL=http://localhost/
 SecPubSubProxy.FederationCertificateValidityDays=30
 
-SecPubSubProxy.keystoreLocation=C:/Users/Mario.BlackMamba/Desktop/DeliveryManager/keystore.jks
+SecPubSubProxy.keystoreLocation=C:/dire/keystore.jks
 SecPubSubProxy.keystorePassword=password
