I modified build.xml to add axis libraries to registry.jar.

--- a/backend/build.xml
+++ b/backend/build.xml
@@ -352,6 +352,16 @@
 			<fileset dir="conf/registry">
 			    <include name="**"/>
 			</fileset>
+			<fileset dir="lib">
+				<include name="axis.jar"/>
+				<include name="commons-discovery-0.2.jar"/>
+				<include name="jaxrpc.jar"/>
+				<include name="saaj.jar"/>
+				<include name="jdom.jar"/>
+			</fileset>
+			<manifest>
+				<attribute name="Class-Path" value="axis.jar jaxrpc.jar commons-discovery-0.2.jar saaj.jar jdom.jar"/>
+			</manifest>
 		</jar>
     </target>
 
