I edited the RegistryProxy to use web-services to invoke methods on the Registry. Please note that there are two commented lines in the init method to have JBoss load all the delivery-manager components. The commented lines are the lines where there is the invocation of the web-services.

--- a/backend/conf/common/config.properties
+++ b/backend/conf/common/config.properties
@@ -3,6 +3,7 @@ RegistryProxy.username=deliveryManager
 RegistryProxy.password=deliveryManagerPwd
 RegistryProxy.name=deliveryManagerSp
 RegistryProxy.logging=false
+RegistryProxy.endPoint=http://localhost:8080/registry/Registry
 
 LoggerProxy.enable=false
 LoggerProxy.url=http://localhost:8080/SeCSELogger/services/SeCSELogger
