--- a/branches/securePubSub/backend/conf/common/config.properties
+++ b/branches/securePubSub/backend/conf/common/config.properties
@@ -3,6 +3,7 @@ RegistryProxy.username=deliveryManager
 RegistryProxy.password=deliveryManagerPwd
 RegistryProxy.name=deliveryManagerSp
 RegistryProxy.logging=false
+RegistryProxy.endPoint=http://localhost:8080/registry/Registry
 
 LoggerProxy.enable=false
 LoggerProxy.url=http://localhost:8080/SeCSELogger/services/SeCSELogger
