--- a/branches/securePubSub/backend/conf/common/config.properties
+++ b/branches/securePubSub/backend/conf/common/config.properties
@@ -37,8 +37,8 @@ LeaseManager.initialRenew=600000
 LeaseManager.standardRenew=3600000
 LeaseManager.leaseTimeout=18000000
 
-SecPubSubProxy.simmetricAlgorithm=AES
-SecPubSubProxy.simmetricKeySize=128
+SecPubSubProxy.symmetricAlgorithm=AES
+SecPubSubProxy.symmetricKeySize=128
 SecPubSubProxy.hashAlgorithm=SHA512
 SecPubSubProxy.CRLdistribuitionPointBaseURL=http://localhost/
 SecPubSubProxy.FederationCertificateValidityDays=30
